--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,12 @@ dependencies {
 
     // For testing  // AVV / 18-05-2016 /
     //androidTestCompile 'com.android.support:support-annotations:23.0.1'
-    androidTestCompile 'com.android.support.test:runner:0.4.1'
-    androidTestCompile 'com.android.support.test:rules:0.4.1'
+    //androidTestCompile 'com.android.support.test:runner:0.4.1'
+    //androidTestCompile 'com.android.support.test:rules:0.4.1'
     // Optional -- Hamcrest library
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    //androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     // Optional -- UI testing with Espresso
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    //androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     // Optional -- UI testing with UI Automator
-    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+    //androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
 }
