--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
 
     // For testing  // AVV / 18-05-2016 /
-    //androidTestCompile 'com.android.support:support-annotations:23.0.1'
-    //androidTestCompile 'com.android.support.test:runner:0.4.1'
-    //androidTestCompile 'com.android.support.test:rules:0.4.1'
+    androidTestCompile 'com.android.support:support-annotations:23.0.1'
+    androidTestCompile 'com.android.support.test:runner:0.4.1'
+    androidTestCompile 'com.android.support.test:rules:0.4.1'
     // Optional -- Hamcrest library
     //androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     // Optional -- UI testing with Espresso
