--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.avv.fjet"
-        minSdkVersion 21
+        //applicationId "com.avv.fjet"
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
